@@ -1,3 +1,12 @@
+2004-10-11  Darin Adler  <darin@apple.com>
+
+        Reviewed by John.
+
+        - fixed <rdar://problem/3834166> <input type=file> sends onchange even when the same file is chosen twice
+
+        * WebCoreSupport.subproj/WebFileButton.m: (-[WebFileButton chooseFilename:]):
+        Do nothing if filename is the same as before.
+
 2004-10-11  Ken Kocienda  <kocienda@apple.com>
 
         Reviewed by Darin
